fixed alignment of top layer elements, removed white border on button

--- a/style.css
+++ b/style.css
@@ -6,19 +6,43 @@ body{
 }
 
 button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #3882f6;
     border-radius: 8px;
-    width: 90px;
-    height: 25px;
+    width: 170px;
+    height: 45px;
     color: #f9faf8;
-    font-weight: bold;
+    font-size: x-large;
+    font-weight: 700;
     border-color: #f9faf8;
     border-style:solid;
 }
 
+/*top layer starts here*/
+
 .header{
     top:0;
+    margin-top: -30px;
     margin-left:0;
+}
+
+.left-content{
+    display: flex;
+    font-size: 24px;
+    color: #f9faf8;
+    font-weight: 900;
+    margin-left: 200px;
+}
+
+.right-content{
+    display: flex;
+    font-size: 18px;
+    color: #e5e7eb;
+    margin-top: -25px;
+    margin-left: 1700px;
+    font-weight: 300;
 }
 
 .toplayer{
@@ -28,6 +52,7 @@ button{
     background-color: #1f2937;
     padding-left: 50px;
     padding-top: 50px;
+    padding-bottom: 7.5%;
 }
 
 .ttext{
@@ -36,27 +61,37 @@ button{
     line-height: 100px;
     font-weight: bolder;
     color: #f9faf8;
+    margin-top: 5%;
+    margin-left: 200px;
+    width: 650px;
 }
 
 .content{
     font-size: 18px;
     color: #e5e7eb;
+    margin-top: -2.5%;
+    margin-left: 200px;
+    width: 750px;
 }
 
 .mainimg{
     align-self: end;
+    margin-top: -18.5%;
+    margin-left: 200px;
+    padding-right: 10%;
 }
 
-.left-content{
-    font-size: 24px;
-    color: #f9faf8;
-    font-weight: bolder;
+.tbutton{
+    align-self: flex-start;
+    margin-top: 25px;
+    margin-left: 10.5%;
 }
 
-.right-content{
-    font-size: 18px;
-    color: #e5e7eb;
+.ttbutton{
+    border-style: none;
 }
+
+/*top layer ends here*/
 
 .title2{
     font-size: 36px;
